bug fix, folkhemmet localization change

--- a/localization/english/ttb_expansion_l_english.yml
+++ b/localization/english/ttb_expansion_l_english.yml
@@ -89,7 +89,7 @@
  swedish_iron_industry: "The Iron Heart Awakens"
  swedish_iron_industry_reason: " #yellow Bergslagen#!, Sweden's ancient mining district and the newly discovered #yellow Malberget#! holds the key to our industrial future. Modernizing its operations is essential to meet the burgeoning demand for metals."
  swedish_folkhemmet: "The People's Home"
- swedish_folkhemmet_reason: "Embark on the ambitious project of building a socially equitable and prosperous society, ensuring welfare and security for all citizens, from cradle to grave."
+ swedish_folkhemmet_reason: "An idea is forming in the mind of the people of Sweden: an ambitious project of building a socially equitable and prosperous society, ensuring welfare and security for all citizens, from cradle to grave. \n#yellow A home for the people#!"
  swedish_gothenburg_port_expansion: "Metropolitan Ambition: Gothenburg"
  swedish_gothenburg_port_expansion_reason: "As industrialization takes hold and emigration swells, #yellow Gothenburg's#! role as Sweden's premier western port becomes ever more critical. Expanding its capacity is vital for our trade and global connections."
  swedish_reklam_the_eastern_land: "Reclaim the Eastern Territories"
