small changes, added Geijer and Wallenberg

--- a/localization/english/ttb_expansion_l_english.yml
+++ b/localization/english/ttb_expansion_l_english.yml
@@ -151,6 +151,10 @@
  Koskinen: "Koskinen"
  Snellman: "Snellman"
  Cygnaeus: "Cygnaeus"
+ André_Oscar: "André Oscar"
+ Wallenberg: "Wallenberg"
+ Erik_Gustaf: "Erik Gustaf"
+ Geijer: "Geijer"
  
  August: "August"
  # Modifiers
@@ -175,6 +179,28 @@
  sweden_unity_behind_new_policies: "Unity Behind New Army Policies"
  sweden_no_compromise_for_army: "No Compromise About New Army Policies"
  sweden_snilleindustri: "Swedish Engineering Focus"
+ sweden_stockholm: "Stockholm"
+ sweden_sundsvall_fire: "Sundsvalls Rebirth"
+ sweden_matchstick_boom: "Swedish Matchstick Supremacy"
+ sweden_stockholm_exhibition: "Stockholm Exhibition"
+ sweden_lasare_movement: "Spiritual Awakening"
+ sweden_church_support: "Church Support"
+ sweden_temperance_revival: "Temperance movement"
+ sweden_trapatron: "Träpatroners Influence"
+ sweden_motala_strike: "Labor Unrest"
+ sweden_nobel_dynamite: "Dynamites Impact"
+ sweden_malmo: "Malmö"
+ sweden_gothenburg: "Göteborg"
+ sweden_railway_development: "Railway Development"
+ sweden_timber_export: "Timber Export"
+ sweden_abolish_estates: "Modern Parliamentary System"
+ sweden_folkhemmet: "Building the Peoples Home"
+ sweden_iron_production: "Swedish Iron Prowess"
+ sweden_retake_finland: "Finland reclaimed"
+ sweden_sundsvall_timber: "Sundsvall"
+ sweden_good_glass_quality: "Glasriket"
+ sweden_mortala_verkstad: "Motalas Industrial Prowess"
+
  
  norway_abolishment_of_new_aristocrats: "Abolished Creation of New Aristocrat Titles"
  norway_det_store_hamskiftet: "Det store hamskiftet"
@@ -203,6 +229,7 @@
  nordic_finland_integration: "Integration of Finland"
  movement_scandinavia_pan_national_name: "Pan-Scandinavian Movement"
  scandinavianism_rising: "Scandinavianism on the Rise"
+ scandinavism_royal_intrig: "Royal Intrig"
  scandinavism_enthusiasm: "Enthusiasm in Pan-Scandinavianism"
  promote_scandinavism: "Promoted Scandinavism"
  attack_scandinavism: "Suppressed Scandinavism"
@@ -213,27 +240,6 @@
  focus_on_integration: "Integrating the Nation"
  focus_on_power: "Focus on Power"
  focus_on_economy: "Focus on Economy"
- sweden_stockholm: "Stockholm"
- sweden_sundsvall_fire: "Sundsvalls Rebirth"
- sweden_matchstick_boom: "Swedish Matchstick Supremacy"
- sweden_stockholm_exhibition: "Stockholm Exhibition"
- sweden_lasare_movement: "Spiritual Awakening"
- sweden_church_support: "Church Support"
- sweden_temperance_revival: "Temperance movement"
- sweden_trapatron: "Träpatroners Influence"
- sweden_motala_strike: "Labor Unrest"
- sweden_nobel_dynamite: "Dynamites Impact"
- sweden_malmo: "Malmö"
- sweden_gothenburg: "Göteborg"
- sweden_railway_development: "Railway Development"
- sweden_timber_export: "Timber Export"
- sweden_abolish_estates: "Modern Parliamentary System"
- sweden_folkhemmet: "Building the Peoples Home"
- sweden_iron_production: "Swedish Iron Prowess"
- sweden_retake_finland: "Finland reclaimed"
- sweden_sundsvall_timber: "Sundsvall"
- sweden_good_glass_quality: "Glasriket"
- sweden_mortala_verkstad: "Motalas Industrial Prowess"
 
 # State Traits
  ttb_state_trait_north_pole: "North Pole"
