--- a/localization/english/ttb_expansion_l_english.yml
+++ b/localization/english/ttb_expansion_l_english.yml
@@ -40,6 +40,12 @@
  je_form_scandinavia: "Unify Scandinavia"
  je_form_scandinavia_reason: "For far too long have we been divided, it is time to unify Scandinavia once and for all."
  has_formed_sca: "Form #yellow Scandinavia#!"
+
+ scandinavia_kalmar_constitution: "The Kalmar Constitution"
+ scandinavia_kalmar_constitution_reason: "With the recent formation of #yellow Scandinavia#!, the diverse legal and political frameworks of all the former #blue Nordic countries#! must now be integrated and formalized. At the heart of this monumental task, a unifying constitution must be carefully drafted. This pivotal work will take place in the historically and symbolically important city of #yellow Kalmar#!, forging the bedrock of our new, unified nation."
+ kalmar_constitution_progress_bar: "Kalmar Constitution progress"
+ kalmar_constitution_progress_bar_desc: "Progress: #v [JournalEntry.GetCurrentBarProgress(ScriptedProgressBar.Self)|%]#! ([JournalEntry.GetCurrentBarValue(ScriptedProgressBar.Self)|1]/120)"
+ kalmar_constitution_progress_succeeds: "The Constitution has been past by the legislature"
  
  denmark_return_of_danish_dominance: "The Unitary State"
  denmark_return_of_danish_dominance_reason: "The [SCOPE.sCountry('den_scope').GetAdjectiveNoFormatting] realm is a royal personal union comprised of the crown of #yellow the Kingdom of #! [SCOPE.sCountry('den_scope').GetName], and the southern fiefs of #yellow the Duchy of #! [SCOPE.sCountry('sch_scope').GetName] and #yellow the Duchy of #! [SCOPE.sCountry('hol_scope').GetName]. Together, it is called #O the Unitary State#!.\n\nHowever, it is far from culturally unitary. While chiefly Danish in the rest of the realm, Germans are the predominant ethnicity in Schleswig-Holstein. Additionally, the more-or-less defunct German Confederation continues to claim that Holstein is part of it.\n\nAs a result of this situation, #O the Unitary State #!is entangled in #O the Schleswig-Holstein Question#!."
@@ -155,6 +161,8 @@
  Wallenberg: "Wallenberg"
  Erik_Gustaf: "Erik Gustaf"
  Geijer: "Geijer"
+ Hjalmar: "Hjalmar"
+ Branting: "Branting"
  
  August: "August"
  # Modifiers
@@ -240,6 +248,9 @@
  focus_on_integration: "Integrating the Nation"
  focus_on_power: "Focus on Power"
  focus_on_economy: "Focus on Economy"
+ scandinavia_low_local_autonomy: "Kalmar Constitution"
+ scandinavia_medium_local_autonomy: "Kalmar Constitution"
+ scandinavia_high_local_autonomy: "Kalmar Constitution"
 
 # State Traits
  ttb_state_trait_north_pole: "North Pole"
