small fixes, changed somme localization

--- a/localization/english/ttb_expansion_l_english.yml
+++ b/localization/english/ttb_expansion_l_english.yml
@@ -65,10 +65,10 @@
  recreation_of_the_unions_over_sch_hol: "Schelswig-Holstein ends up in a union under Denmark again."
  
  swedish_the_rise_of_lantmanna_partiet: "Rise of Agrarian Politics"
- swedish_the_rise_of_lantmanna_partiet_goal: "Rise of Agrarian Politics has occured for 3 years."
- swedish_the_rise_of_lantmanna_partiet_reason: "With the recent shift in politics away from absolutism, there are many farmers in Sweden that has begun to organise to try and get their will through."
+ swedish_the_rise_of_lantmanna_partiet_goal: "Rise of Agrarian Politics has occurred for 3 years."
+ swedish_the_rise_of_lantmanna_partiet_reason: "With the recent shift in politics away from absolutism, there are many farmers in Sweden that has begun to organize to try and get their will through."
  swedish_champions_of_national_defence: "Question of National Defense"
- swedish_champions_of_national_defence_reason: "The Swedish army is in a sorry state and it has had a negative effect on our international standing."
+ swedish_champions_of_national_defence_reason: "Our #gold armed forces#!, once a symbol of #yellow Swedish#! might, have fallen into a state of decline, negatively impacting our international standing.\n\nTo embark on a much-needed #blue military reform#!, we must first dismantle the antiquated systems that sustain them. The #white Allotment System (indelningsverket)#! of 1682 and the archaic #white Basic Taxes (Grundskatter)#! that are deeply intertwined with our military's structure.\n\nPhasing out these policies and establishing a modern, #Gold professional army#! will require a new form of government, a path that begins with the long-overdue abolition of the #yellow Four Estates#!."
  swedish_the_trade_problems: "The Trade Discussion"
  swedish_the_trade_problems_reason: "There have been arguments between the #green Rural Folks#! and the supporters of a #yellow Free Market#! about the future of the trade in Sweden."
  swedish_the_end_of_lantmanna_party: "End of Agrarian Politics"
