changed somme localization

--- a/localization/english/ttb_expansion_l_english.yml
+++ b/localization/english/ttb_expansion_l_english.yml
@@ -42,7 +42,7 @@
  has_formed_sca: "Form #yellow Scandinavia#!"
 
  scandinavia_kalmar_constitution: "The Kalmar Constitution"
- scandinavia_kalmar_constitution_reason: "With the recent formation of #yellow Scandinavia#!, the diverse legal and political frameworks of all the former #blue Nordic countries#! must now be integrated and formalized. At the heart of this monumental task, a unifying constitution must be carefully drafted. This pivotal work will take place in the historically and symbolically important city of #yellow Kalmar#!, forging the bedrock of our new, unified nation."
+ scandinavia_kalmar_constitution_reason: "With the recent formation of #yellow Scandinavia#!, the diverse legal and political frameworks of all the former #blue Nordic countries#! must now be integrated and formalized. At the heart of this monumental task, a unifying constitution must be carefully drafted.\n\nThis pivotal work will take place in the historically and symbolically important city of #yellow Kalmar#!, forging the bedrock of our new, unified nation."
  kalmar_constitution_progress_bar: "Kalmar Constitution progress"
  kalmar_constitution_progress_bar_desc: "Progress: #v [JournalEntry.GetCurrentBarProgress(ScriptedProgressBar.Self)|%]#! ([JournalEntry.GetCurrentBarValue(ScriptedProgressBar.Self)|1]/120)"
  kalmar_constitution_progress_succeeds: "The Constitution has been past by the legislature"
@@ -77,7 +77,7 @@
  swedish_restoration_of_the_military_reason: "The #yellow Swedish military#! has been wounded since the loss of #yellow Finland#! and despite reforms being made and corruption being on an all-time low, it is clear that the pride of our military is wounded. Things need to change for it to become better."
  has_completed_champions_of_national_defense: "Has completed Question of National Defense Journal Entry"
  swedish_glasriket: "The Kingdom of Glass"
- swedish_glasriket_reason: "Develop Småland's unique glassmaking traditions into a thriving industrial and artistic powerhouse, capturing both domestic and international markets."
+ swedish_glasriket_reason: "Develop #light_green Småland's#! unique #blue glassmaking#! traditions into a thriving industrial and artistic powerhouse, capturing both domestic and international markets."
  swedish_sundsvall_timber: "Sundsvall: The Timber Capital"
  swedish_sundsvall_timber_reason: "Sundsvall's sawmills are operating at an unprecedented scale, solidifying its position as the undisputed heart of Sweden's booming timber industry and a global export hub."
  swedish_retake_finland: "Reclaiming Finland"
@@ -101,7 +101,7 @@
  swedish_reklam_the_eastern_land: "Reclaim the Eastern Territories"
  swedish_reklam_the_eastern_land_reason: "Our most eastern territories were ceded by the #yellow Treaty of Nystad#! in 1721. While their reclamation has been a long-held aspiration, now, in the wake of our decisive #yellow Victory in Finland#!, #r Russia#! finds itself weakened. This presents a unique window of opportunity to potentially regain these lands, and we should consider acting decisively."
  swedish_snilleindustri: "The Dawn of Genius Industry"
- swedish_snilleindustri_reason: "#yellow Sweden#! is witnessing an explosion of innovation, as brilliant #yellow engineers and entrepreneurial#! spirits establish a new wave of specialized, high-tech industries. Moving beyond the mere exploitation of raw materials towards sophisticated engineering, precision manufacturing, and groundbreaking technological advancements that are poised to cement our nation's reputation for ingenuity on the global stage."
+ swedish_snilleindustri_reason: "#yellow Sweden#! is witnessing an explosion of innovation, as brilliant #yellow engineers and entrepreneurial#! spirits establish a new wave of specialized, high-tech industries.\n\nMoving beyond the mere exploitation of #light_green raw materials#! towards sophisticated #blue engineering#!, precision #blue manufacturing#!, and groundbreaking #blue technological#! advancements that are poised to cement our nation's reputation for ingenuity on the global stage."
  snilleindustri_mortala_complete: "#yellow The Motala Workshop#! completed"
  snilleindustri_glasriket_complete: "#yellow The Kingdom of Glass#! completed"
  snilleindustri_timber_complete: "#yellow The Green Gold Export#! completed"
