--- a/localization/english/ttb_expansion_l_english.yml
+++ b/localization/english/ttb_expansion_l_english.yml
@@ -106,6 +106,8 @@
  snilleindustri_glasriket_complete: "#yellow The Kingdom of Glass#! completed"
  snilleindustri_timber_complete: "#yellow The Green Gold Export#! completed"
  snilleindustri_iron_complete: "#yellow The Iron Heart Awakens#! completed"
+ swedish_the_forestry_act: "The Forestry Act"
+ swedish_the_forestry_act_reason: "For generations, the #light_green forest#! has been the very heart of the #yellow Swedish soul#!, a source of both livelihood and deep-seated identity. But the great #blue sawmill industry#! and the #blue charcoal kilns#! of #yellow Bergslagen#! have taken a heavy toll on this ancient relationship. The ceaseless demand for timber has left our once endless bounty looking thin and worn. Yet, a new idea is taking root. A #white 'conservation movement'#! is stirring in the Parliament, arguing that our forests are a finite inheritance to be managed, not simply exploited.\n\nThe debates are often heated, but the direction seems clear. The new #gold Forestry Act (Skogsvårdslagen)#!, which requires replanting and oversight from forestry inspectors. There are also more ambitious calls to preserve entire landscapes, creating vast #gold national parks#! for #blue science#! and #blue tourism#!. This is a moment of truth for our nation commitment to safeguarding the wild beauty that has long defined us."
 
  nor_the_great_transformation: "The Great Transformation"
  nor_the_great_transformation_reason: "Norway has taken the first steps towards industrialising it's industries, all it got to do now is to become more reliant on itself to become a competetive force in the Western world."
@@ -208,8 +210,8 @@
  sweden_sundsvall_timber: "Sundsvall"
  sweden_good_glass_quality: "Glasriket"
  sweden_mortala_verkstad: "Motalas Industrial Prowess"
+ sweden_forestry_act: "The Forestry Act"
 
- 
  norway_abolishment_of_new_aristocrats: "Abolished Creation of New Aristocrat Titles"
  norway_det_store_hamskiftet: "Det store hamskiftet"
  norway_det_store_hamskiftet_alt: "Det store hamskiftet"
